; ModuleID = '/home/carl/AnghaBench/redis/src/extr_sentinel.c_sentinelPropagateDownAfterPeriod.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_sentinel.c_sentinelPropagateDownAfterPeriod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sentinelPropagateDownAfterPeriod(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [3 x i32*], align 16
  %7 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %8 = getelementptr inbounds [3 x i32*], [3 x i32*]* %6, i64 0, i64 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 2
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %8, align 8
  %12 = getelementptr inbounds i32*, i32** %8, i64 1
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %12, align 8
  %16 = getelementptr inbounds i32*, i32** %12, i64 1
  store i32* null, i32** %16, align 8
  store i32 0, i32* %5, align 4
  br label %17

17:                                               ; preds = %44, %1
  %18 = load i32, i32* %5, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds [3 x i32*], [3 x i32*]* %6, i64 0, i64 %19
  %21 = load i32*, i32** %20, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %47

23:                                               ; preds = %17
  %24 = load i32, i32* %5, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds [3 x i32*], [3 x i32*]* %6, i64 0, i64 %25
  %27 = load i32*, i32** %26, align 8
  %28 = call i32* @dictGetIterator(i32* %27)
  store i32* %28, i32** %3, align 8
  br label %29

29:                                               ; preds = %33, %23
  %30 = load i32*, i32** %3, align 8
  %31 = call i32* @dictNext(i32* %30)
  store i32* %31, i32** %4, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %41

33:                                               ; preds = %29
  %34 = load i32*, i32** %4, align 8
  %35 = call %struct.TYPE_4__* @dictGetVal(i32* %34)
  store %struct.TYPE_4__* %35, %struct.TYPE_4__** %7, align 8
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 8
  br label %29

41:                                               ; preds = %29
  %42 = load i32*, i32** %3, align 8
  %43 = call i32 @dictReleaseIterator(i32* %42)
  br label %44

44:                                               ; preds = %41
  %45 = load i32, i32* %5, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %5, align 4
  br label %17

47:                                               ; preds = %17
  ret void
}

declare dso_local i32* @dictGetIterator(i32*) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local %struct.TYPE_4__* @dictGetVal(i32*) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
